@@ -5,6 +5,7 @@ import com.tasksprints.auction.domain.auction.exception.AuctionAlreadyClosedExce
 import com.tasksprints.auction.domain.auction.exception.AuctionNotFoundException;
 import com.tasksprints.auction.domain.auction.exception.InvalidAuctionTimeException;
 import com.tasksprints.auction.domain.auction.model.Auction;
+import com.tasksprints.auction.domain.auction.model.AuctionCategory;
 import com.tasksprints.auction.domain.auction.repository.AuctionRepository;
 import com.tasksprints.auction.domain.auction.model.AuctionStatus;
 import com.tasksprints.auction.domain.auction.dto.request.AuctionRequest;
@@ -82,7 +83,7 @@ public class AuctionServiceImpl implements AuctionService {
 
         return foundAuctions.stream()
                 .map(AuctionResponse::of)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -90,7 +91,7 @@ public class AuctionServiceImpl implements AuctionService {
         List<Auction> foundAuctions =  auctionRepository.findAll();
         return foundAuctions.stream()
                 .map(AuctionResponse::of)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -99,5 +100,14 @@ public class AuctionServiceImpl implements AuctionService {
                 .orElseThrow(() -> new AuctionNotFoundException("Auction not found"));
 
         return AuctionResponse.of(foundAuction);
+    }
+
+    @Override
+    public List<AuctionResponse> getAuctionsByAuctionCategory(AuctionCategory auctionCategory) {
+        List<Auction> foundAuctions =  auctionRepository.findAuctionsByAuctionCategory(auctionCategory);
+
+        return foundAuctions.stream()
+                .map(AuctionResponse::of)
+                .toList();
     }
 }
